fix(navBar): Bad font contrast when in front of white images on posts

--- a/src/components/General/Navbar/navbar.module.css
+++ b/src/components/General/Navbar/navbar.module.css
@@ -13,6 +13,8 @@
     padding: 0 10px;
    
     width: 100%;
+
+    text-shadow: 0 0 5px rgba(0, 0, 0, .4);
 }
   
 #navbar-logo {
